<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_normal">

    <fragment
        android:id="@+id/navigation_custom"
        android:name="com.avans.infinitydice.ui.custom.CustomFragment"
        android:label="@string/title_custom"
        tools:layout="@layout/fragment_custom" />

    <fragment
        android:id="@+id/navigation_normal"
        android:name="com.avans.infinitydice.ui.normal.NormalFragment"
        android:label="@string/title_normal"
        tools:layout="@layout/fragment_normal" />

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.avans.infinitydice.ui.admin.AdminFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_admin" />
</navigation>